# GuardAI-Kids

./: .gitignore  CHANGELOG.md  Future Work.md  PROJECT_SUMMARY.md  README.md  SYSTEM_DIAGRAM.md  TODO.md  image_analyser_diagram.html  main.py  pyproject.toml  requirements.txt  web_interface.py
artifacts/: metadata.json  token_length_report.json
artifacts/image/: metadata.json  policy_eval_image.json
artifacts/image_clip_nsfw_violence/: metadata.json
artifacts/image_clip_ocr/: metadata.json
artifacts/multimodal/: metadata.json
artifacts/multimodal_clip_nsfw_violence/: metadata.json
artifacts/multimodal_clip_ocr/: metadata.json
artifacts/reports/: overview.csv  policy_metrics_by_age.csv  roc_auc_by_label.csv  summary_report.md
artifacts/reports/snapshot_20260404_1344/: results_snapshot.json  (+1 more)
artifacts/text/: metadata.json
data/: README
etp/: __init__.py  config.py  data.py  explainability.py  modeling.py  policy.py  service.py  workflow.py  youtube.py
scripts/: analyze_token_lengths.py  backfill_thumbnail_labels.py  extract_image_features.py  fetch_dataset_thumbnails.py  generate_experiment_report.py  reevaluate_policy_from_predictions.py  regenerate_explanations.py  save_results_snapshot.py
src/guardaikids/: __main__.py  config.py  data.py  explainability.py  image_features.py  main.py  modeling.py  policy.py  service.py  web_interface.py  workflow.py  youtube.py
tests/: test_data.py  test_explainability.py  test_main.py  test_modeling.py  test_policy.py  test_scripts.py  test_service.py  test_web_interface.py  test_workflow.py  test_youtube.py
